# code-review-bot

./: .env.example  README.md  config.py  pyproject.toml
docs/: PROPOSAL.md
gitlab/: client.py
models/: Issue.py
review_bot/: __init__.py  cli.py  config.py  pipeline.py
review_bot/agents/: __init__.py  base.py  claude_runner.py  identify.py  openai_runner.py  runner.py  toolkit.py  validate.py
review_bot/gitlab/: client.py  commenter.py
review_bot/models/: hunk.py
review_bot/prompts/: identify.py  validate.py
review_bot/tools/: codebase.py  storage.py
